test: 로그 목록 반환 테스트 작성